# AetherOnePySocial

./: .gitignore  AetherOnePySocial_Postman_Collection.json  Procfile  README.md  alembic.ini  conftest.py  generateOpenAPI.py  openapi.json  pyproject.toml  requirements.txt  setup.py
.railway/: config.toml
alembic/: env.py
alembic/versions/: 6c3de43e4575_initial.py  8c359fcc6cb0_make_user_id_and_local_session_id_.py  9b04b7861162_update_session_keys_constraints.py  9febcb9c9db2_initial_migration.py  c35295a018f7_add_unique_constraint_to_session_keys.py  d131994f0c8c_set_default_used_false_session_keys.py
app/: config.py  database.py  main.py
app/models/: analysis.py  case.py  cases.py  catalog.py  comparison.py  machine.py  merged_analysis.py  rate.py  rate_analysis.py  session.py  session_keys.py  session_raw.py  sessions.py  user.py
app/routers/: analysis.py  auth.py  cases.py  catalog.py  comparison.py  keys.py  machines.py  merged_analysis.py  rate_analysis.py  rates.py  session_keys.py  sessions.py  shared_analysis.py  user.py  utils.py
app/schemas/: __init__.py  analysis.py  case.py  cases.py  catalog.py  comparison.py  machine.py  merged_analysis.py  rate.py  rate_analysis.py  session.py  session_keys.py  sessions.py  shared_analysis.py  user.py
tests/: test_analysis.py  test_auth.py  test_cases.py  test_catalog.py  test_comparison.py  test_machines.py  test_merged_analysis.py  test_rates.py  test_session_keys.py  test_sessions.py
ui/: svelte.config.js
